bug fix in navbar: event-container no z-index + padding added to menuwrpper right side

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -30,7 +30,7 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     opacity: 0.9;
-  
+
     display: inline-block;
     padding: 15px 10px 10px 10px;
 
@@ -59,10 +59,10 @@
 @media screen and (max-width: $breakpoint-mobile-flipped) {
     #navbar{
         top: 1em;
-        
+
         .menu-wrapper {
             width: 80%;
-            padding: 15px 0px 10px 10px;
+            padding: 15px 10px 10px 10px;
 
             .menu-hamburger{
                 padding-right:10px;
