--- a/src/layouts/Events/index.scss
+++ b/src/layouts/Events/index.scss
@@ -1,6 +1,5 @@
 .Events-container {
   position: static;
-  z-index: 150;
   max-width: 850px;
   margin: auto;
   padding: 1em 0em;
